2003-12-19  Werner Koch  <wk@gnupg.org>

	* Manifest: Empty new file.  Also add Manifest files to all CPU
	specific directories.
	* Makefile.am: Added.

	* mpiutil.c (gcry_mpi_randomize): Use gcry_create_nonce if WEAK
	random has been requested.

2003-10-31  Werner Koch  <wk@gnupg.org>

	* i386/mpih-rshift.S, i386/mpih-lshift.S: Use %dl and not %edx for
	testb; this avoids an assembler warning.

	* mpi-pow.c (gcry_mpi_powm): s/exp/expo/ to avoid shadowing warning.

2003-08-19  Marcus Brinkmann  <marcus@g10code.de>

	* Makefile.am (SUFFIXES): New variable.
	(.S.o, .S.lo, .S.obj): Rewritten.

2003-07-30  Moritz Schulte  <moritz@g10code.com>

	* longlong.h (__clz_tab): Renamed to _gcry_clz_tab.
	* mpi-bit.c (__clz_tab): Likewise.

2003-07-27  Werner Koch  <wk@gnupg.org>

	* mpicoder.c (gcry_mpi_scan): New argument BUFLEN to replace the
	use of the intial value of NBYTES.  Changed BUFFER to unsigned.
	(gcry_mpi_print): Likewise.
	(gcry_mpi_dump): New.
	(_gcry_log_mpidump): Make use of gcry_mpi_dump.
	(mpi_print): Removed.
	(gcry_mpi_scan): Allocated mpi in secure memory when required.
	(gcry_mpi_aprint): Changed BUFFER to unsigned char*.

2003-07-14  Moritz Schulte  <moritz@g10code.com>

	* mpicoder.c: Used gcry_err* wrappers for libgpg-error symbols.

2003-06-16  Moritz Schulte  <moritz@g10code.com>

	* mpi-add.c: Replace last occurences of old type names with newer
	names (i.e. replace MPI with gcry_mpi_t).
	* mpi-bit.c: Likewise.
	* mpi-cmp.c: Likewise.
	* mpi-div.c: Likewise.
	* mpi-gcd.c: Likewise.
	* mpi-internal.h: Likewise.
	* mpi-inv.c: Likewise.
	* mpi-mpow.c: Likewise.
	* mpi-mul.c: Likewise.
	* mpi-pow.c: Likewise.
	* mpi-scan.c: Likewise.
	* mpicoder.c: Likewise.
	* mpiutil.c: Likewise.

2003-06-09  Moritz Schulte  <moritz@g10code.com>

	* mpicoder.c (gcry_mpi_scan): Adjust for libgpg-error.
	(gcry_mpi_print): Likewise.
	(gcry_mpi_aprint): Likewise.

2003-06-07  Moritz Schulte  <moritz@g10code.com>
